# jarvis

./: .gitignore  README.md  jarvis.py  pyproject.toml  setup.py
jarvis/: __init__.py  _archive.py  _job.py  alias.py  archive.py  cache.py  config.py  hashable.py  job.py  manager.py  utils.py  vision.py  worker.py
jarvis/models/: __init__.py  alexnet.py  base.py  lenet.py  resnet.py
tests/: test_archive.py  test_config.py
tests/fixtures/: defaults.yaml  resnet.yaml  resnet_config.yaml
