[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
authors = [
    {name = "Zhe Li", email = "zheli24@stanford.edu"},
]
dynamic = ["version"]
dependencies = [
    "numpy", "torch", "pyyaml", "tqdm", "ipywidgets",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "jarvis.__version__"}
